// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCategoriesService should return a transaction category by id 1`] = `
{
  "createdAt": 2024-05-10T10:21:18.363Z,
  "deleted": false,
  "id": "623b58ada3deba9879422fbf",
  "name": "Category for all types",
  "parentCategoryId": null,
  "updatedAt": 2024-05-10T10:21:18.363Z,
  "userId": "61460d7354ea082ad0256749",
  "v": 0,
  "visibility": [
    "INCOME",
    "EXPENSE",
    "TRANSFER",
  ],
}
`;

exports[`TransactionCategoriesService should return an array of transaction categories from findAllByUser 1`] = `
[
  {
    "createdAt": 2024-05-10T10:21:18.363Z,
    "deleted": false,
    "id": "623b58ada3deba9879422fbf",
    "name": "Category for all types",
    "parentCategoryId": null,
    "updatedAt": 2024-05-10T10:21:18.363Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "INCOME",
      "EXPENSE",
      "TRANSFER",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b58b8a3deba9879422fc2",
    "name": "Invisible category",
    "parentCategoryId": null,
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b58bfa3deba9879422fc5",
    "name": "Expense category",
    "parentCategoryId": null,
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "EXPENSE",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b58c5a3deba9879422fc8",
    "name": "Income category",
    "parentCategoryId": null,
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "INCOME",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b17a3deba9879422fcd",
    "name": "Transfer category",
    "parentCategoryId": null,
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "TRANSFER",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b36a3deba9879422fd1",
    "name": "Transfer sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "TRANSFER",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b51a3deba9879422fd5",
    "name": "Income sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "INCOME",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b64a3deba9879422fd9",
    "name": "Expense sub category",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "EXPENSE",
    ],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b84a3deba9879422fdd",
    "name": "Invisble sub category",
    "parentCategoryId": "623b58ada3deba9879422fbf",
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [],
  },
  {
    "createdAt": 2024-05-10T10:21:18.364Z,
    "deleted": false,
    "id": "623b6b91a3deba9879422fe1",
    "name": "Sub category for all types",
    "parentCategoryId": "623b58b8a3deba9879422fc2",
    "updatedAt": 2024-05-10T10:21:18.364Z,
    "userId": "61460d7354ea082ad0256749",
    "v": 0,
    "visibility": [
      "INCOME",
      "EXPENSE",
      "TRANSFER",
    ],
  },
]
`;

exports[`TransactionCategoriesService should return an array of transaction categories from findMonthlySummariesByUserAndId 1`] = `
[
  {
    "expense": {
      "amount": 1135.98,
      "count": 2,
      "transactionAmount": 2494.16,
    },
    "id": {
      "month": 1,
      "year": 2022,
    },
    "income": {
      "amount": 2271.5299999999997,
      "count": 2,
      "transactionAmount": 3367.1099999999997,
    },
    "total": {
      "amount": 1135.55,
      "count": 4,
      "transactionAmount": 872.9499999999998,
    },
    "transfer": {
      "amount": 0,
      "count": 0,
      "transactionAmount": 0,
    },
  },
]
`;
